--- a/package.json
+++ b/package.json
@@ -3,15 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.3",
-    "@types/react": "^18.0.8",
-    "@types/react-dom": "^18.0.2",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-native": ">=0.59",
-    "react-redux": "^8.0.5",
-    "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2"
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@mui/material": "^5.11.16",
+    "@reduxjs/toolkit": "1.9.3",
+    "@types/react": "18.0.33",
+    "@types/react-dom": "18.0.11",
+    "fbjs": "0.2.1",
+    "material-ui": "0.12.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.6",
+    "react-redux": "8.0.5",
+    "react-tap-event-plugin": "0.1.8",
+    "redux": "4.2.1",
+    "redux-thunk": "2.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
