--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@reduxjs/toolkit": "1.9.3",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.5",
     "fbjs": "0.2.1",
     "material-ui": "0.12.2",
     "react": "18.2.0",
