--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.71.6",
     "react-redux": "8.0.5",
+    "react-router-dom": "^6.10.0",
     "react-tap-event-plugin": "0.1.8",
     "redux": "4.2.1",
     "redux-thunk": "2.4.2"
