--- a/package.json
+++ b/package.json
@@ -3,23 +3,27 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.5.0",
-    "@emotion/styled": "^11.3.0",
-    "@mui/material": "^5.11.16",
+    "@emotion/react": "11.10.6",
+    "@emotion/styled": "11.10.6",
+    "@mui/material": "5.11.16",
     "@reduxjs/toolkit": "1.9.3",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
-    "axios": "^1.3.5",
+    "axios": "1.3.5",
+    "events": "^3.3.0",
     "fbjs": "0.2.1",
+    "http": "^0.0.0",
+    "https": "^1.0.0",
     "material-ui": "0.12.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.6",
     "react-redux": "8.0.5",
-    "react-router-dom": "^6.10.0",
+    "react-router-dom": "6.10.0",
     "react-tap-event-plugin": "0.1.8",
     "redux": "4.2.1",
-    "redux-thunk": "2.4.2"
+    "redux-thunk": "2.4.2",
+    "zlib": "^1.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
