--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "dependencies": {
     "@emotion/react": "11.10.6",
     "@emotion/styled": "11.10.6",
-    "@hookform/resolvers": "^3.0.1",
-    "@mui/icons-material": "^5.11.16",
+    "@hookform/resolvers": "3.0.1",
+    "@material-ui/core": "4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "5.11.16",
     "@mui/material": "5.11.16",
     "@reduxjs/toolkit": "1.9.3",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
     "axios": "1.3.5",
+    "clsx": "^1.2.1",
     "events": "3.3.0",
     "fbjs": "0.2.1",
     "http": "0.0.0",
@@ -19,7 +22,7 @@
     "material-ui": "0.12.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.43.9",
+    "react-hook-form": "7.43.9",
     "react-native": "0.71.6",
     "react-redux": "8.0.5",
     "react-router-dom": "6.10.0",
